--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "html-css-template",
+  "name": "personal-portfolio-fcc",
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
